--- a/tests/map/map.html
+++ b/tests/map/map.html
@@ -6,7 +6,7 @@
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=visualization&sensor=true_or_false"></script>
 <script type="text/javascript">
 	function initialize() {
-		var centerlatlng = new google.maps.LatLng(31.299278, 120.725326);
+		var centerlatlng = new google.maps.LatLng(31.290613, 120.725080);
 		var myOptions = {
 			zoom: 17,
 			center: centerlatlng,
@@ -14,202 +14,64 @@
 		};
 		var map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
 
-var coords = [
-new google.maps.LatLng(31.299368, 120.725326),
-new google.maps.LatLng(31.299367, 120.725308),
-new google.maps.LatLng(31.299363, 120.725290),
-new google.maps.LatLng(31.299356, 120.725274),
-new google.maps.LatLng(31.299347, 120.725259),
-new google.maps.LatLng(31.299336, 120.725246),
-new google.maps.LatLng(31.299323, 120.725235),
-new google.maps.LatLng(31.299309, 120.725228),
-new google.maps.LatLng(31.299294, 120.725223),
-new google.maps.LatLng(31.299278, 120.725221),
-new google.maps.LatLng(31.299263, 120.725223),
-new google.maps.LatLng(31.299248, 120.725228),
-new google.maps.LatLng(31.299233, 120.725235),
-new google.maps.LatLng(31.299221, 120.725246),
-new google.maps.LatLng(31.299209, 120.725259),
-new google.maps.LatLng(31.299201, 120.725274),
-new google.maps.LatLng(31.299194, 120.725290),
-new google.maps.LatLng(31.299190, 120.725308),
-new google.maps.LatLng(31.299188, 120.725326),
-new google.maps.LatLng(31.299190, 120.725345),
-new google.maps.LatLng(31.299194, 120.725362),
-new google.maps.LatLng(31.299201, 120.725379),
-new google.maps.LatLng(31.299209, 120.725394),
-new google.maps.LatLng(31.299221, 120.725407),
-new google.maps.LatLng(31.299233, 120.725417),
-new google.maps.LatLng(31.299248, 120.725425),
-new google.maps.LatLng(31.299263, 120.725430),
-new google.maps.LatLng(31.299278, 120.725432),
-new google.maps.LatLng(31.299294, 120.725430),
-new google.maps.LatLng(31.299309, 120.725425),
-new google.maps.LatLng(31.299323, 120.725417),
-new google.maps.LatLng(31.299336, 120.725407),
-new google.maps.LatLng(31.299347, 120.725394),
-new google.maps.LatLng(31.299356, 120.725379),
-new google.maps.LatLng(31.299363, 120.725362),
-new google.maps.LatLng(31.299367, 120.725345),
+var PolylineCoordinates = [
+new google.maps.LatLng(31.290607, 120.724875),
+new google.maps.LatLng(31.290640, 120.724874),
+new google.maps.LatLng(31.294019, 120.724811),
+new google.maps.LatLng(31.294957, 120.724788),
+new google.maps.LatLng(31.294982, 120.724787),
+new google.maps.LatLng(31.294989, 120.724787),
 ];
 
-var polygon = new google.maps.Polygon({
+var Path = new google.maps.Polyline({
 clickable: false,
 geodesic: true,
-fillColor: "#008000",
-fillOpacity: 0.500000,
-paths: coords,
-strokeColor: "#008000",
-strokeOpacity: 0.500000,
-strokeWeight: 1
+path: PolylineCoordinates,
+strokeColor: "#FF0000",
+strokeOpacity: 1.000000,
+strokeWeight: 5
 });
 
-polygon.setMap(map);
+Path.setMap(map);
 
 
 var coords = [
-new google.maps.LatLng(31.299368, 120.725326),
-new google.maps.LatLng(31.299367, 120.725308),
-new google.maps.LatLng(31.299363, 120.725290),
-new google.maps.LatLng(31.299356, 120.725274),
-new google.maps.LatLng(31.299347, 120.725259),
-new google.maps.LatLng(31.299336, 120.725246),
-new google.maps.LatLng(31.299323, 120.725235),
-new google.maps.LatLng(31.299309, 120.725228),
-new google.maps.LatLng(31.299294, 120.725223),
-new google.maps.LatLng(31.299278, 120.725221),
-new google.maps.LatLng(31.299263, 120.725223),
-new google.maps.LatLng(31.299248, 120.725228),
-new google.maps.LatLng(31.299233, 120.725235),
-new google.maps.LatLng(31.299221, 120.725246),
-new google.maps.LatLng(31.299209, 120.725259),
-new google.maps.LatLng(31.299201, 120.725274),
-new google.maps.LatLng(31.299194, 120.725290),
-new google.maps.LatLng(31.299190, 120.725308),
-new google.maps.LatLng(31.299188, 120.725326),
-new google.maps.LatLng(31.299190, 120.725345),
-new google.maps.LatLng(31.299194, 120.725362),
-new google.maps.LatLng(31.299201, 120.725379),
-new google.maps.LatLng(31.299209, 120.725394),
-new google.maps.LatLng(31.299221, 120.725407),
-new google.maps.LatLng(31.299233, 120.725417),
-new google.maps.LatLng(31.299248, 120.725425),
-new google.maps.LatLng(31.299263, 120.725430),
-new google.maps.LatLng(31.299278, 120.725432),
-new google.maps.LatLng(31.299294, 120.725430),
-new google.maps.LatLng(31.299309, 120.725425),
-new google.maps.LatLng(31.299323, 120.725417),
-new google.maps.LatLng(31.299336, 120.725407),
-new google.maps.LatLng(31.299347, 120.725394),
-new google.maps.LatLng(31.299356, 120.725379),
-new google.maps.LatLng(31.299363, 120.725362),
-new google.maps.LatLng(31.299367, 120.725345),
-];
-
-var polygon = new google.maps.Polygon({
-clickable: false,
-geodesic: true,
-fillColor: "#008000",
-fillOpacity: 0.500000,
-paths: coords,
-strokeColor: "#008000",
-strokeOpacity: 0.500000,
-strokeWeight: 1
-});
-
-polygon.setMap(map);
-
-
-var coords = [
-new google.maps.LatLng(31.299368, 120.725326),
-new google.maps.LatLng(31.299367, 120.725308),
-new google.maps.LatLng(31.299363, 120.725290),
-new google.maps.LatLng(31.299356, 120.725274),
-new google.maps.LatLng(31.299347, 120.725259),
-new google.maps.LatLng(31.299336, 120.725246),
-new google.maps.LatLng(31.299323, 120.725235),
-new google.maps.LatLng(31.299309, 120.725228),
-new google.maps.LatLng(31.299294, 120.725223),
-new google.maps.LatLng(31.299278, 120.725221),
-new google.maps.LatLng(31.299263, 120.725223),
-new google.maps.LatLng(31.299248, 120.725228),
-new google.maps.LatLng(31.299233, 120.725235),
-new google.maps.LatLng(31.299221, 120.725246),
-new google.maps.LatLng(31.299209, 120.725259),
-new google.maps.LatLng(31.299201, 120.725274),
-new google.maps.LatLng(31.299194, 120.725290),
-new google.maps.LatLng(31.299190, 120.725308),
-new google.maps.LatLng(31.299188, 120.725326),
-new google.maps.LatLng(31.299190, 120.725345),
-new google.maps.LatLng(31.299194, 120.725362),
-new google.maps.LatLng(31.299201, 120.725379),
-new google.maps.LatLng(31.299209, 120.725394),
-new google.maps.LatLng(31.299221, 120.725407),
-new google.maps.LatLng(31.299233, 120.725417),
-new google.maps.LatLng(31.299248, 120.725425),
-new google.maps.LatLng(31.299263, 120.725430),
-new google.maps.LatLng(31.299278, 120.725432),
-new google.maps.LatLng(31.299294, 120.725430),
-new google.maps.LatLng(31.299309, 120.725425),
-new google.maps.LatLng(31.299323, 120.725417),
-new google.maps.LatLng(31.299336, 120.725407),
-new google.maps.LatLng(31.299347, 120.725394),
-new google.maps.LatLng(31.299356, 120.725379),
-new google.maps.LatLng(31.299363, 120.725362),
-new google.maps.LatLng(31.299367, 120.725345),
-];
-
-var polygon = new google.maps.Polygon({
-clickable: false,
-geodesic: true,
-fillColor: "#008000",
-fillOpacity: 0.500000,
-paths: coords,
-strokeColor: "#008000",
-strokeOpacity: 0.500000,
-strokeWeight: 1
-});
-
-polygon.setMap(map);
-
-
-var coords = [
-new google.maps.LatLng(31.299368, 120.725326),
-new google.maps.LatLng(31.299367, 120.725308),
-new google.maps.LatLng(31.299363, 120.725290),
-new google.maps.LatLng(31.299356, 120.725274),
-new google.maps.LatLng(31.299347, 120.725259),
-new google.maps.LatLng(31.299336, 120.725246),
-new google.maps.LatLng(31.299323, 120.725235),
-new google.maps.LatLng(31.299309, 120.725228),
-new google.maps.LatLng(31.299294, 120.725223),
-new google.maps.LatLng(31.299278, 120.725221),
-new google.maps.LatLng(31.299263, 120.725223),
-new google.maps.LatLng(31.299248, 120.725228),
-new google.maps.LatLng(31.299233, 120.725235),
-new google.maps.LatLng(31.299221, 120.725246),
-new google.maps.LatLng(31.299209, 120.725259),
-new google.maps.LatLng(31.299201, 120.725274),
-new google.maps.LatLng(31.299194, 120.725290),
-new google.maps.LatLng(31.299190, 120.725308),
-new google.maps.LatLng(31.299188, 120.725326),
-new google.maps.LatLng(31.299190, 120.725345),
-new google.maps.LatLng(31.299194, 120.725362),
-new google.maps.LatLng(31.299201, 120.725379),
-new google.maps.LatLng(31.299209, 120.725394),
-new google.maps.LatLng(31.299221, 120.725407),
-new google.maps.LatLng(31.299233, 120.725417),
-new google.maps.LatLng(31.299248, 120.725425),
-new google.maps.LatLng(31.299263, 120.725430),
-new google.maps.LatLng(31.299278, 120.725432),
-new google.maps.LatLng(31.299294, 120.725430),
-new google.maps.LatLng(31.299309, 120.725425),
-new google.maps.LatLng(31.299323, 120.725417),
-new google.maps.LatLng(31.299336, 120.725407),
-new google.maps.LatLng(31.299347, 120.725394),
-new google.maps.LatLng(31.299356, 120.725379),
-new google.maps.LatLng(31.299363, 120.725362),
-new google.maps.LatLng(31.299367, 120.725345),
+new google.maps.LatLng(31.290702, 120.725080),
+new google.maps.LatLng(31.290701, 120.725062),
+new google.maps.LatLng(31.290697, 120.725044),
+new google.maps.LatLng(31.290690, 120.725028),
+new google.maps.LatLng(31.290681, 120.725013),
+new google.maps.LatLng(31.290670, 120.725000),
+new google.maps.LatLng(31.290658, 120.724989),
+new google.maps.LatLng(31.290643, 120.724982),
+new google.maps.LatLng(31.290628, 120.724977),
+new google.maps.LatLng(31.290613, 120.724975),
+new google.maps.LatLng(31.290597, 120.724977),
+new google.maps.LatLng(31.290582, 120.724982),
+new google.maps.LatLng(31.290568, 120.724989),
+new google.maps.LatLng(31.290555, 120.725000),
+new google.maps.LatLng(31.290544, 120.725013),
+new google.maps.LatLng(31.290535, 120.725028),
+new google.maps.LatLng(31.290528, 120.725044),
+new google.maps.LatLng(31.290524, 120.725062),
+new google.maps.LatLng(31.290523, 120.725080),
+new google.maps.LatLng(31.290524, 120.725099),
+new google.maps.LatLng(31.290528, 120.725116),
+new google.maps.LatLng(31.290535, 120.725133),
+new google.maps.LatLng(31.290544, 120.725148),
+new google.maps.LatLng(31.290555, 120.725161),
+new google.maps.LatLng(31.290568, 120.725171),
+new google.maps.LatLng(31.290582, 120.725179),
+new google.maps.LatLng(31.290597, 120.725184),
+new google.maps.LatLng(31.290613, 120.725186),
+new google.maps.LatLng(31.290628, 120.725184),
+new google.maps.LatLng(31.290643, 120.725179),
+new google.maps.LatLng(31.290658, 120.725171),
+new google.maps.LatLng(31.290670, 120.725161),
+new google.maps.LatLng(31.290681, 120.725148),
+new google.maps.LatLng(31.290690, 120.725133),
+new google.maps.LatLng(31.290697, 120.725116),
+new google.maps.LatLng(31.290701, 120.725099),
 ];
 
 var polygon = new google.maps.Polygon({
@@ -230,6 +92,6 @@ polygon.setMap(map);
 </script>
 </head>
 <body style="margin:0px; padding:0px;" onload="initialize()">
-	<div id="map_canvas" style="width: 50%; height: 50%;"></div>
+	<div id="map_canvas" style="width: 100%; height: 100%;"></div>
 </body>
 </html>
